Updated Admin Design

--- a/diste/css/alt/adminlte.components.css
+++ b/diste/css/alt/adminlte.components.css
@@ -5756,7 +5756,7 @@ html.maximized-card {
 }
 
 .callout.callout-info {
-  border-left-color: #117a8b;
+  border-left-color: #370547;
 }
 
 .callout.callout-success {
