--- a/diste/css/adminlte.css
+++ b/diste/css/adminlte.css
@@ -2883,14 +2883,14 @@ fieldset:disabled a.btn {
 .btn-info:hover {
   color: #ffffff;
   background-color: #138496;
-  border-color: #117a8b;
+  border-color: #370547;
 }
 
 .btn-info:focus,
 .btn-info.focus {
   color: #ffffff;
   background-color: #138496;
-  border-color: #117a8b;
+  border-color: #370547;
   box-shadow: none, 0 0 0 0 rgba(58, 176, 195, 0.5);
 }
 
@@ -2905,7 +2905,7 @@ fieldset:disabled a.btn {
 .btn-info:not(:disabled):not(.disabled).active,
 .show > .btn-info.dropdown-toggle {
   color: #ffffff;
-  background-color: #117a8b;
+  background-color: #370547;
   border-color: #10707f;
 }
 
@@ -5567,7 +5567,7 @@ a.badge-success.focus {
 a.badge-info:hover,
 a.badge-info:focus {
   color: #ffffff;
-  background-color: #117a8b;
+  background-color: #370547;
 }
 
 a.badge-info:focus,
@@ -7207,7 +7207,7 @@ a.bg-info:hover,
 a.bg-info:focus,
 button.bg-info:hover,
 button.bg-info:focus {
-  background-color: #117a8b !important;
+  background-color: #370547 !important;
 }
 
 .bg-warning {
@@ -20970,7 +20970,7 @@ html.maximized-card {
 }
 
 .callout.callout-info {
-  border-left-color: #117a8b;
+  border-left-color: #370547;
 }
 
 .callout.callout-success {
@@ -32631,7 +32631,7 @@ blockquote.quote-gray-dark h6 {
 }
 
 .bg-info.btn:hover {
-  border-color: #117a8b;
+  border-color: #370547;
   color: #ececec;
 }
 
@@ -32639,7 +32639,7 @@ blockquote.quote-gray-dark h6 {
 .bg-info.btn:not(:disabled):not(.disabled).active,
 .bg-info.btn:active,
 .bg-info.btn.active {
-  background-color: #117a8b !important;
+  background-color: #370547 !important;
   border-color: #10707f;
   color: #ffffff;
 }
@@ -33091,7 +33091,7 @@ blockquote.quote-gray-dark h6 {
 }
 
 .bg-cyan.btn:hover {
-  border-color: #117a8b;
+  border-color: #370547;
   color: #ececec;
 }
 
@@ -33099,7 +33099,7 @@ blockquote.quote-gray-dark h6 {
 .bg-cyan.btn:not(:disabled):not(.disabled).active,
 .bg-cyan.btn:active,
 .bg-cyan.btn.active {
-  background-color: #117a8b !important;
+  background-color: #370547 !important;
   border-color: #10707f;
   color: #ffffff;
 }
@@ -33330,7 +33330,7 @@ blockquote.quote-gray-dark h6 {
 }
 
 .bg-gradient-info.btn:hover {
-  border-color: #117a8b;
+  border-color: #370547;
   color: #ececec;
 }
 
@@ -33350,7 +33350,7 @@ blockquote.quote-gray-dark h6 {
 .bg-gradient-info.btn:not(:disabled):not(.disabled).active,
 .bg-gradient-info.btn:active,
 .bg-gradient-info.btn.active {
-  background: #117a8b linear-gradient(180deg, #358e9c, #117a8b) repeat-x !important;
+  background: #370547 linear-gradient(180deg, #358e9c, #370547) repeat-x !important;
 }
 
 .bg-gradient-warning {
@@ -34130,7 +34130,7 @@ blockquote.quote-gray-dark h6 {
 }
 
 .bg-gradient-cyan.btn:hover {
-  border-color: #117a8b;
+  border-color: #370547;
   color: #ececec;
 }
 
@@ -34150,7 +34150,7 @@ blockquote.quote-gray-dark h6 {
 .bg-gradient-cyan.btn:not(:disabled):not(.disabled).active,
 .bg-gradient-cyan.btn:active,
 .bg-gradient-cyan.btn.active {
-  background: #117a8b linear-gradient(180deg, #358e9c, #117a8b) repeat-x !important;
+  background: #370547 linear-gradient(180deg, #358e9c, #370547) repeat-x !important;
 }
 
 .bg-gradient-white {
