--- a/diste/css/alt/adminlte.core.css
+++ b/diste/css/alt/adminlte.core.css
@@ -2657,14 +2657,14 @@ fieldset:disabled a.btn {
 .btn-info:hover {
   color: #ffffff;
   background-color: #138496;
-  border-color: #117a8b;
+  border-color: #370547;
 }
 
 .btn-info:focus,
 .btn-info.focus {
   color: #ffffff;
   background-color: #138496;
-  border-color: #117a8b;
+  border-color: #370547;
   box-shadow: none, 0 0 0 0 rgba(58, 176, 195, 0.5);
 }
 
@@ -2679,7 +2679,7 @@ fieldset:disabled a.btn {
 .btn-info:not(:disabled):not(.disabled).active,
 .show > .btn-info.dropdown-toggle {
   color: #ffffff;
-  background-color: #117a8b;
+  background-color: #370547;
   border-color: #10707f;
 }
 
@@ -5237,7 +5237,7 @@ a.badge-success.focus {
 a.badge-info:hover,
 a.badge-info:focus {
   color: #ffffff;
-  background-color: #117a8b;
+  background-color: #370547;
 }
 
 a.badge-info:focus,
@@ -6784,7 +6784,7 @@ a.bg-info:hover,
 a.bg-info:focus,
 button.bg-info:hover,
 button.bg-info:focus {
-  background-color: #117a8b !important;
+  background-color: #370547 !important;
 }
 
 .bg-warning {
@@ -15493,7 +15493,7 @@ blockquote.quote-gray-dark h6 {
 }
 
 .bg-info.btn:hover {
-  border-color: #117a8b;
+  border-color: #370547;
   color: #ececec;
 }
 
@@ -15501,7 +15501,7 @@ blockquote.quote-gray-dark h6 {
 .bg-info.btn:not(:disabled):not(.disabled).active,
 .bg-info.btn:active,
 .bg-info.btn.active {
-  background-color: #117a8b !important;
+  background-color: #370547 !important;
   border-color: #10707f;
   color: #ffffff;
 }
@@ -15953,7 +15953,7 @@ blockquote.quote-gray-dark h6 {
 }
 
 .bg-cyan.btn:hover {
-  border-color: #117a8b;
+  border-color: #370547;
   color: #ececec;
 }
 
@@ -15961,7 +15961,7 @@ blockquote.quote-gray-dark h6 {
 .bg-cyan.btn:not(:disabled):not(.disabled).active,
 .bg-cyan.btn:active,
 .bg-cyan.btn.active {
-  background-color: #117a8b !important;
+  background-color: #370547 !important;
   border-color: #10707f;
   color: #ffffff;
 }
@@ -16192,7 +16192,7 @@ blockquote.quote-gray-dark h6 {
 }
 
 .bg-gradient-info.btn:hover {
-  border-color: #117a8b;
+  border-color: #370547;
   color: #ececec;
 }
 
@@ -16212,7 +16212,7 @@ blockquote.quote-gray-dark h6 {
 .bg-gradient-info.btn:not(:disabled):not(.disabled).active,
 .bg-gradient-info.btn:active,
 .bg-gradient-info.btn.active {
-  background: #117a8b linear-gradient(180deg, #358e9c, #117a8b) repeat-x !important;
+  background: #370547 linear-gradient(180deg, #358e9c, #370547) repeat-x !important;
 }
 
 .bg-gradient-warning {
@@ -16992,7 +16992,7 @@ blockquote.quote-gray-dark h6 {
 }
 
 .bg-gradient-cyan.btn:hover {
-  border-color: #117a8b;
+  border-color: #370547;
   color: #ececec;
 }
 
@@ -17012,7 +17012,7 @@ blockquote.quote-gray-dark h6 {
 .bg-gradient-cyan.btn:not(:disabled):not(.disabled).active,
 .bg-gradient-cyan.btn:active,
 .bg-gradient-cyan.btn.active {
-  background: #117a8b linear-gradient(180deg, #358e9c, #117a8b) repeat-x !important;
+  background: #370547 linear-gradient(180deg, #358e9c, #370547) repeat-x !important;
 }
 
 .bg-gradient-white {
