--- a/src/Admin/login/ALogin.module.css
+++ b/src/Admin/login/ALogin.module.css
@@ -211,7 +211,7 @@ h2 {
   padding-top: 5px !important;
   padding-bottom: 5px !important;
   position: relative;
-  background: #37b0dd;
+  background: #9869a7;
   border-radius: 5px;
   -webkit-box-shadow: 0px 10px 34px -15px rgba(0, 0, 0, 0.24);
   -moz-box-shadow: 0px 10px 34px -15px rgba(0, 0, 0, 0.24);
