--- a/src/components/Dashboard/DashboardContent.css
+++ b/src/components/Dashboard/DashboardContent.css
@@ -1,10 +1,16 @@
 body {
   background-image: url("/images/background3.jpg");
-
+  background-color: #c36eca !important;
   width: 100%;
   height: 100vh;
   background-size: cover;
   background-repeat: no-repeat;
+}
+.content-wrapper{
+  height: 100vh;
+}
+.docbtn{
+  width: 30%;
 }
 .hole {
   width: 150px;
@@ -233,5 +239,11 @@ hr {
     padding: 10px;
     margin: auto;
     padding-bottom: 0px !important;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .docbtn{
+    width: 60%;
   }
 }
